option java_package = "com.gp.game.protocol";
package Op;
//协议----所有协议id 都必须是10000为基础 每个万位代表不同的模块

//公用推送协议
enum push
{
	//错误码推送
	PUSH_ERROR_CODE = 10001;
	//推送玩家基本信息
	SYNCH_PLAYER_INFO = 10002;
	//广播推送
	PUSH_BROADCAST_MSG = 10003;
	//金币不足
	PUSH_MONEY_NOT_ENOUGH = 10004;
	//金币超过最大值
	PUSH_MONEY_EXCEED_MAX = 10005;
}
//用户模块
enum user
{
	OPCODE_PLAYER_USER_MODLE = 20000; 
	//用户登陆
	OPCODE_PLAYER_LOGIN = 20001;
	//心跳
	OPCODE_HEART_BEAT = 20002;
	//注册账号
	OPCODE_REGISTER_ACCOUNT = 20003;
	//获取验证码
	OPCODE_GET_CODE = 20004;
	//修改头像
	OPCODE_UPATE_HEAD = 20005;
	//修改昵称
	OPCODE_UPATE_NICK_NAME = 20006;
	//修改密码
	OPCODE_UPATE_PASSWORD = 20007;
	//用户离线
	OPCODE_OFFLINE = 20008;
	//存钱取钱
	OPCODE_BANK_MONEY = 20009;
	//公告列表
	OPCODE_NOTICE_LIST = 20010;
	//公告单个
	OPCODE_NOTICE_DETAIL = 20011;
	//在线客服
	OPCODE_CUSTOMER_SERVICE = 20012;
	//排行榜
	OPCODE_RANKING = 20013;
	//绑定银行卡信息
	OPCODE_SETUP_BANK = 20014;
	//兑换记录
	OPCODE_EXCHANGE_RECORD = 20015;
	//兑换
	OPCODE_EXCHANGE_MONEY = 20016;
	//错误信息上传
	ERROR_INFO_UPLOAD = 20017;
	//游戏内取钱推送
	 OPCODE_GAME_BANK_MONEY= 20018;
	 //GPS
	 OPCODE_UPDATE_GPS_INFO= 20019;
	 //查询签到信息
	 OPCODE_USER_SIGN_INFO = 20020;
	 //用户进行签到
	 OPCODE_USER_SIGN = 20021;
}

//房间
enum room {
	OPCODE_ROOM_MODLE   = 30000; 
	//进入房间
	OPCODE_ENTER_ROOM   = 30001;
	//聊天
	OPCODE_CHAT_INFO   = 30002;
	//在房间中推送
	OPCODE_ROOM_IN   = 30003;
	//在退出房间
	OPCODE_ROOM_EXIT   = 30004;
	//托管
	OPCODE_TRUSTEESHIP   = 30005;
	//查看头像
	OPCODE_SEE_HEAD   = 30006;
	//房间记录
	OPCODE_ROOM_RECORD   = 30007;
	//房间规则信息
	OPCODE_ROOM_RULE_INFO   = 30008;
	//存在房间中推送发
	PUSH_EXIST_ROOM_IN = 30009;
	//历史庄家列表
	OPCODE_ROOM_BANKER_LIST   = 30010;
	//准备
	OPCODE_ROOM_READY   = 30011;
	//玩家的历史记录
	OPCODE_ROOM_PLAYER_RECORD   = 30012;
}

//麻将模块
enum majong
{
	OPCODE_MAJONG_BATTLE_MODLE   = 40000; 
	//开始战斗
	OPCODE_MAJONG_START_BATTLE   = 40001;
	//出牌
	OPCODE_MAJONG_PLAY_BATTLE   = 40002;
	//战斗完成
	OPCODE_MAJONG_FINISH_BATTLE   = 40003;
	//加倍 听推送
	OPCODE_MAJONG_PUSH_BATTLE_STEP   = 40004;
	//checkroom
	OPCODE_MAJONG_CHECK_ROOM   = 40005;
	
}

//跑得快战斗模块
enum pdkPoker
{
	OPCODE_PDK_BATTLE_MODLE   = 50000; 
	//开始战斗
	OPCODE_PDK_START_BATTLE   = 50001;
	//出牌
	OPCODE_PDK_PLAY_BATTLE   = 50002;
	//完成战斗
	OPCODE_PDK_FINISH_BATTLE   = 50003;
	//玩家重连
	OPCODE_PDK_RECONNECT  = 50004; 
	//炸弹推送
	OPCODE_PDK_PUSH_BOMB  = 50005; 
}

//斗地主模块
enum Ddz
{
	OPCODE_DDZ_BATTLE_MODLE   = 60000; 
	//开始战斗
	OPCODE_DDZ_START_BATTLE   = 60001;
	//叫分
	OPCODE_DDZ_CALL_SCORE   = 60002;
	//加倍
	OPCODE_DDZ_DOUBLE   = 60003;
	//出牌
	OPCODE_DDZ_STEP_BATTLE   = 60005;
	//战斗完成
	OPCODE_DDZ_FINISH_BATTLE   = 60006;
	//玩家重连
	OPCODE_DDZ_RECONNECT  = 60007; 
	//请求炸弹详情
	OPCODE_DDZ_MULTIPLE_DETAIL  = 60008; 
}
//扎金花模块
enum threePoker
{
	OPCODE_THREE_BATTLE_MODLE   = 70000; 
	//开始游戏
	OPCODE_THREE_START_GAME   = 70001; 
	//下注
	OPCODE_THREE_BETS   = 70002; 
	//看牌
	OPCODE_THREE_LOOK_CARD   = 70003; 
	//弃牌
	OPCODE_THREE_DISCARDCARD  = 70004; 
	//跟到底
	OPCODE_THREE_ALWAYSSET  = 70005; 
	//比牌
	OPCODE_THREE_COMPARISON_CARD  = 70006; 
	//亮牌
	OPCODE_THREE_BRIGHT_CARD  = 70008; 
	//战斗结束
	OPCODE_THREE_BATTLE_FINSH  = 70009; 
	//玩家状态推送
	OPCODE_THREE_PLAYER_STATUS  = 70010; 
	//玩家重连
	OPCODE_THREE_RECONNECT  = 70011; 
	//推送让准备
	OPCODE_THREE_PUSH_READY  = 70012; 
}
//龙虎大战模块
enum dragonTiger
{
	OPCODE_DRAGONTIGER_BATTLE_MODLE   = 80000; 
	//状态推送
	OPCODE_DRAGONTIGER_BATTLE_STATUS   = 80001; 
	//下注
	OPCODE_DRAGONTIGER_STAKE   = 80002;
	//排行 
	OPCODE_DRAGONTIGER_RANK   = 80003; 
	//胜负
	OPCODE_DRAGONTIGER_WINFAIL   = 80004; 
	//发牌
	OPCODE_DRAGONTIGER_STARTGAME   = 80005; 
	//首次进入房间
	OPCODE_DRAGONTIGER_FIRST_ROOM_PUSH   = 80006; 
	//房间 信息
	OPCODE_DRAGONTIGER_ROOM_SINGLE   = 80007; 
	//房间列表
	OPCODE_DRAGONTIGER_ROOM_LIST   = 80008; 
	//申请上庄
	OPCODE_DRAGONTIGER_UP_BANKER   = 80009; 
	//申请下庄
	OPCODE_DRAGONTIGER_DOWN_BANKER   = 80010; 
}


//百人牛牛
enum baiNiuniu
{
	OPCODE_BAINIUNIU_MODLE   = 90000; 
	OPCODE_BAINIUNIU_BATTLE_STATUS   = 90001; //状态推送
	OPCODE_BAINIUNIU_STAKE   = 90002; //下注
	//申请上庄
	OPCODE_BAINIUNIU_UP_BANKER   = 90003; 
	OPCODE_BAINIUNIU_PLAYER_RANK   = 90004; //玩家排行
	OPCODE_BAINIUNIU_START_GAME   = 90005; //开始游戏
	OPCODE_BAINIUNIU_WIN_FAIL   = 90006; //胜负情况
	//申请下庄
	OPCODE_BAINIUNIU_DOWN_BANKER   = 90007; 
	OPCODE_BAINIUNIU_FIRST_ROOM_PUSH   = 90009; //首次进入房间
	//房间 信息
	OPCODE_BAINIUNIU_ROOM_SINGLE   = 90010; 
	//房间列表
	OPCODE_BAINIUNIU_ROOM_LIST   = 90011; 
}

//抢庄牛牛
enum qiangNiuniu
{
	OPCODE_ROB_MODLE   = 100000; 
	//抢庄
	OPCODE_ROB_BANKER  = 100001; 
	//庄家推送
	OPCODE_ROB_PUSH_BANKER  = 100002; 
	//压注
	OPCODE_ROB_STAKE  = 100003; 
	//开始游戏
	OPCODE_ROB_BATTLE_START  = 100004; 
	//看牌
	OPCODE_ROB_LOOK_CARD  = 100005; 
	//战斗完成
	OPCODE_ROB_BATTLE_FINISH  = 100006; 
	//发牌
	OPCODE_ROB_DEAL_CARD  = 100007; 
	//重连
	OPCODE_ROB_RECONNECT  = 100008; 
	//推送让准备
	OPCODE_ROB_PUSH_READY  = 100009; 
}
//德州扑克
enum texasPoker
{
	OPCODE_TEXASPOKER_MODLE   = 110000; 
	//开始游戏
	OPCODE_TEXASPOKER_STARTGAME   = 110001; 
	//操作
	OPCODE_TEXASPOKER_STEP   = 110002; 
	//发牌
	OPCODE_TEXASPOKER_DEALCARD   = 110003; 
	//完成
	OPCODE_TEXASPOKER_FINISH  = 110004; 
	//第一次进入游戏
	OPCODE_TEXASPOKER_FISRT  = 110005; 
	//设置操作
	OPCODE_TEXASPOKER_SET_STEP  = 110006; 
}

//财神到
enum godWealth
{
	OPCODE_GODWEALTH_MODLE   = 120000; 
}
//红黑大战
enum redBlack
{
	OPCODE_REDBLACK_MODLE   = 130000;
	//状态推送
	OPCODE_REDBLACK_BATTLE_STATUS   = 130001; 
	//下注
	OPCODE_REDBLACK_STAKE   = 130002;
	//排行 
	OPCODE_REDBLACK_RANK   = 130003; 
	//胜负
	OPCODE_REDBLACK_WINFAIL   = 130004; 
	//发牌
	OPCODE_REDBLACK_STARTGAME   = 130005; 
	//首次进入房间
	OPCODE_REDBLACK_FIRST_ROOM_PUSH   = 130006; 
	//房间 信息
	OPCODE_REDBLACK_ROOM_SINGLE   = 130007; 
	//房间列表
	OPCODE_REDBLACK_ROOM_LIST   = 130008; 
	//申请上庄
	OPCODE_REDBLACK_UP_BANKER   = 130009; 
	//申请下庄
	OPCODE_REDBLACK_DOWN_BANKER   = 130010; 
}

//百家乐
enum baccara
{
	OPCODE_BACCARA_MODLE   = 140000; 
	//房间列表
	OPCODE_BACCARA_ROOM_LIST   = 140001; 
	//下注
	OPCODE_BACCARA_STAKE   = 140002;
	//排行 
	OPCODE_BACCARA_RANK   = 140003; 
	//状态推送
	OPCODE_BACCARA_BATTLE_STATUS   = 140004; 
	//发牌
	OPCODE_BACCARA_STARTGAME   = 140005; 
	//首次进入房间
	OPCODE_BACCARA_FIRST_ROOM_PUSH   = 140006; 
	//房间 信息
	OPCODE_BACCARA_ROOM_SINGLE   = 140007; 
	//房间 走势图
	OPCODE_BACCARA_WINFAIL   = 140008; 
	//申请上庄
	OPCODE_BACCARA_UP_BANKER   = 140009; 
	//申请下庄
	OPCODE_BACCARA_DOWN_BANKER   = 140010; 
}
//捕鱼
enum fishes
{
	OPCODE_FISHES_MODLE   = 150000; 
	//首次进入房间
	OPCODE_FISHES_FIRST_ROOM_PUSH   = 150001; 
	//射击
	OPCODE_FISHES_BATTLE_STEP   = 150002; 
	//死亡
	OPCODE_FISHES_DEAD_PUSH   = 150003; 
	//设置子弹
	OPCODE_FISHES_SET_MONEY   = 150004; 
	//射击方式
	OPCODE_FISHES_CHANGE_SHOOT   = 150005; 
	//生成鱼推送
	OPCODE_FISHES_GENERATE_FISHES_PUSH   = 150006; 
	//鱼出界
	OPCODE_FISHES_OUT   = 150007; 
	//击中鱼 算概率
	OPCODE_FISHES_HIT   = 150008; 
	//状态推送
	OPCODE_FISHES_STATUS   = 150009; 
	//更换炮
	OPCODE_FISHES_CHANGE_CANNON   = 150010; 
	//鱼潮推送
	OPCODE_FISHES_FISH_TIDE   = 150011; 
}

//水果机
enum fruits
{
	OPCODE_FRUITS_MODLE   = 160000; 
	//设置金额
	OPCODE_FRUITS_SET_MONEY   = 160001; 
	//开始游戏
	OPCODE_FRUITS_START_GAME   = 160002; 
	//获取所有房间奖池信息
	OPCODE_FRUITS_ALL_ROOM_POOL   = 160003; 
	//房间奖池推送
	OPCODE_FRUITS_ROOM_POOL_PUSH   = 160004; 
	//水果大战推送
	OPCODE_FRUITS_WAR_PUSH   = 160005; 
	//水果大战 设置线路
	OPCODE_FRUITS_SET_LINE   = 160006; 
	//获取房间信息
	OPCODE_FRUITS_GET_ROOM   = 160007; 
}

//糖果
enum candy
{
	OPCODE_CANDY_MODLE   = 170000; 
	//进入游戏
	OPCODE_CANDY_ENTER_GAME   = 170001; 
	//设置下注
	OPCODE_CANDY_SET_STAKE   = 170002; 
	//设置线数
	OPCODE_CANDY_SET_LINE   = 170003; 
	//开始游戏
	OPCODE_CANDY_START_GAME   = 170004; 
	//退出游戏
	OPCODE_CANDY_EXIT_GAME   = 170005; 
	//奖池推送
	OPCODE_CANDY_REWARD_POOL   = 170006; 
	
}

//探宝
enum treasure
{
	OPCODE_TREASURE_MODLE   = 180000; 
	//进入游戏
	OPCODE_TREASURE_ENTER_GAME   = 180001; 
	//设置下注
	OPCODE_TREASURE_SET_STAKE   = 180002; 
	//设置线数
	OPCODE_TREASURE_SET_LINE   = 180003; 
	//开始游戏
	OPCODE_TREASURE_START_GAME   = 180004; 
	//退出游戏
	OPCODE_TREASURE_EXIT_GAME   = 180005; 
	//奖池推送
	OPCODE_TREASURE_REWARD_POOL   = 180006; 
	
}
//骰宝
enum diceBao
{
	OPCODE_DICEBAO_MODLE   = 190000; 
	OPCODE_DICEBAO_STATUS   = 190001; //状态推送
	OPCODE_DICEBAO_STAKE   = 190002; //下注
	OPCODE_DICEBAO_START_GAME   = 190003; //开始游戏
	OPCODE_DICEBAO_PLAYER_RANK   = 190004; //玩家排行
	OPCODE_DICEBAO_WIN_FAIL   = 190005; //胜负情况
	OPCODE_DICEBAO_FIRST_ROOM_PUSH   = 190006; //首次进入房间
	//房间 信息 单个
	OPCODE_DICEBAO_ROOM_SINGLE   = 190007; 
	//房间列表
	OPCODE_DICEBAO_ROOM_LIST   = 190008; 
	//申请上庄
	OPCODE_DICEBAO_UP_BANKER   = 190009; 
	//申请下庄
	OPCODE_DICEBAO_DOWN_BANKER   = 190010; 
	//续投
	OPCODE_DICEBAO_CONTINUE_STAKE   = 190011; 
}

//奔驰宝马
enum benzBmw
{
	OPCODE_BENZBMW_MODLE   = 200000; 
	OPCODE_BENZBMW_STATUS   = 200001; //状态推送(OPBenzBmwBattleStatusPush 状态推送)
	OPCODE_BENZBMW_STAKE   = 200002; //下注
	OPCODE_BENZBMW_START_GAME   = 200003; //开始游戏(PushBenzBmwBattleFinsh 游戏结果)
	OPCODE_BENZBMW_PLAYER_RANK   = 200004; //玩家排行
	OPCODE_BENZBMW_WIN_FAIL   = 200005; //走势图(OPBenzBmwRoundInfoRet //开奖记录)
	OPCODE_BENZBMW_FIRST_ROOM_PUSH   = 200006; //首次进入房间(OpBenzBmwFirstRoomPush)
	//房间 信息 单个
	OPCODE_BENZBMW_UP_BANKER   = 200009; 
	//申请下庄
	OPCODE_BENZBMW_DOWN_BANKER   = 200010; 
}
//飞禽走兽
enum briAndBea
{
	OPCODE_BRIANDBEA_MODLE   = 210000; 
	OPCODE_BRIANDBEA_STATUS   = 210001; //状态推送(OPBirAndBeaBattleStatusPush 开始or停止下注)
	OPCODE_BRIANDBEA_STAKE   = 210002; //下注
	OPCODE_BRIANDBEA_START_GAME   = 210003; //开始游戏(PushBirAndBeaBattleFinsh 游戏结果)
	OPCODE_BRIANDBEA_PLAYER_RANK   = 210004; //玩家排行
	OPCODE_BRIANDBEA_WIN_FAIL   = 210005; //开奖记录(走势图)(OPBirAndBeaRoundInfoRet)
	OPCODE_BRIANDBEA_FIRST_ROOM_PUSH   = 210006; //首次进入房间 (OpBirAndBeaFirstRoomPush)
	//申请上庄
	OPCODE_BRIANDBEA_UP_BANKER   = 210009; 
	//申请下庄
	OPCODE_BRIANDBEA_DOWN_BANKER   = 210010; 
	//申请下庄
}














